Added utils and some implementation of Any

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(Peechu_Interpreter)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Peechu_Interpreter main.cpp)
+add_executable(Peechu_Interpreter main.cpp
+        src/utils/Utils.h
+        src/utils/String.h
+        src/Any.cpp
+        src/Any.h)
