Reformatted the semantics stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,6 @@ add_executable(Peechu_Interpreter main.cpp
         src/utils/Utils.h
         src/utils/String.h
         src/Any.cpp
-        src/Any.h)
+        src/Any.h
+        src/semantics/Semantics.h
+        src/semantics/Tokens.h)
